--- a/.gitignore
+++ b/.gitignore
@@ -91,11 +91,4 @@ ENV/
 # Custom
 exported*.csv
 batch*.csv
-.\logs\group\*
-.\logs\host\*
-.\logs\misc\*
-.\logs\network\*
-.\logs\policy\*
-.\logs\post\*
-.\logs\service\*
-.\logs\session\*
+logfile.txt
