--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,7 @@
 language: python
 python:
-  - "3.4"
   - "3.6"
 install:
   - pip install -r requirements.txt
-#script:
-#  - pytest
+script:
+    pytest
