--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,6 @@ python:
 install:
   - pip install -r requirements.txt
 script:
-    pytest
+    coverage run --source=moscowdjango,meetup manage.py test
+after_success:
+coveralls
