--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,6 @@ python:
 install:
   - pip install -r requirements.txt
 script:
-    coverage run --source=cpapi/cpapiweb run.py
+    cpapiweb/run.py
 after_success:
     coveralls
