--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ python:
 install:
   - pip install -r requirements.txt
 script:
+    mkdir /var/log/cpapi
+    chown www-data /var/log/cpapi
     cpapiweb/run.py
 after_success:
     coveralls
