--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
+sudo:
+    required
 language:
     python
 python:
@@ -5,8 +7,6 @@ python:
 install:
   - pip install -r requirements.txt
 script:
-    mkdir /var/log/cpapi
-    chown www-data /var/log/cpapi
-    cpapiweb/run.py
+    test.py
 after_success:
     coveralls
