--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,6 @@ python:
 install:
   - pip install -r requirements.txt
 script:
-    cpapiweb/run.py
+    python3 cpapiweb/run.py
 after_success:
     coveralls
