--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ language:
     python
 python:
   - "3.6"
+before_install:
+    mkdir /var/log/cpapi/
 install:
   - pip install -r requirements.txt
 script:
