--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,6 @@ before_install:
 install:
   - pip install -r requirements.txt
 script:
-    python3 cpapiweb/run.py
+    sudo python3 cpapiweb/run.py
 after_success:
     coveralls
