--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,12 @@
-sudo:
-    required
 language:
     python
 python:
-  - "3.6"
+    "3.6"
 before_install:
     sudo mkdir /var/log/cpapi/
 install:
-  - pip install -r requirements.txt
+    pip install -r requirements.txt
 script:
-    sudo python3 cpapiweb/run.py
+    python3 cpapiweb/run.py
 after_success:
     coveralls
