--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ python:
     "3.6"
 before_install:
     sudo mkdir /var/log/cpapi/
+    sudo chown www-data /var/log/cpapi/
 install:
     pip install -r requirements.txt
 script:
