--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,6 @@ python:
 install:
     pip install -r requirements.txt
 script:
-    python3 cpapiweb/run.py
+    test.sh
 after_success:
     coveralls
