--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ python:
 install:
     pip install -r requirements.txt
 script:
-    test.sh
+    - sudo chmod +x test.sh
+    - test.sh
 after_success:
     coveralls
