--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,6 @@ install:
     pip install -r requirements.txt
 script:
     - sudo chmod +x test.sh
-    - test.sh
+    - ./test.sh
 after_success:
     coveralls
