Ignore apache conf and wsgi

--- a/wsgi/cpapi.conf
+++ b/wsgi/cpapi.conf
@@ -1,7 +1,15 @@
-<VirtualHost *>
-    Servername cpapi.com
+<VirtualHost *:80>
+    Servername themadhatter.org
+    Redirect permanent / https://themadhatter.org
+</VirtualHost>
+
+<VirtualHost *:443>
+    Servername themadhatter.org
     WSGIDaemonProcess cpapi
-    WSGIScriptAlias / /var/www/cpapi/cpapi.wsgi
+    WSGIScriptAlias / /var/www/cpapi/wsgi/cpapi.wsgi
+    SSLEngine On
+    SSLCertificateFile "/etc/ssl/certs/cpapidemo.cert"
+    SSLCertificateKeyFile "/etc/ssl/certs/cpapidemo.key"
 
     <Directory /var/www/cpapi>
         WSGIProcessGroup cpapi
