--- a/wsgi/cpapi.conf
+++ b/wsgi/cpapi.conf
@@ -1,5 +1,6 @@
 <VirtualHost *>
     Servername cpapi.com
+    SetEnv SCRIPT_NAME /cpapi
     WSGIDaemonProcess cpapi
     WSGIScriptAlias / /var/www/cpapi/cpapi.wsgi
 
